css: Fix KaTeX summation alignment and line wrapping.
Previously, the sum (capital sigma) operator would become
misaligned so that the lower and upper bounds are placed in
the wrong location. Changing the line height fixes this alignment.

Also, previously, wrapping long lines of TeX did not work, as often,
the different lines of math would overlap with each other.

Fixes #4657.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2058,8 +2058,12 @@ div.floating_recipient {
 }
 
 .katex-html {
-    line-height: initial;
+    line-height: 3em;
     white-space: initial;
+}
+
+.katex-display {
+    margin: 0em 0;
 }
 
 .tex-error {
